cluster/apps/networking/misc-ingresses/dh-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: dh
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.2.129
      - ip: 2001:14ba:16fd:9610:a236:9fff:fe18:55fb
    ports:
      - name: https
        port: 443
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dh-plex
  namespace: networking
subsets:
  - addresses:
      - ip: 2001:14ba:16fd:9610:a236:9fff:fe18:55fb
      - ip: 192.168.2.129
    ports:
      - name: https
        port: 32400
        protocol: TCP
