cluster/apps/networking/misc-ingresses/dh-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dh
  namespace: networking
spec:
  ports:
    - name: https
      port: 443
  type: ClusterIP
