cluster/apps/networking/misc-ingresses/home-pve-docker-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-pve-docker
  namespace: networking
spec:
  ports:
    - name: https
      port: 443
  type: ExternalName
  externalName: 192.168.2.18
