cluster/apps/networking/misc-ingresses/assistant-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: assistant
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: "assistant.home.${MAIN_DOMAIN}"
      http:
        paths:
          - backend:
              serviceName: home-srv-docker
              servicePort: 443
  tls:
    - hosts:
        - "assistant.home.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
