cluster/apps/networking/misc-ingresses/dev-machine-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dev-system-ingress
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "${DEV_DOMAIN}"
      http:
        paths:
          - backend:
              path: "/api/"
              serviceName: ryzen-gaming
              servicePort: 8090
  tls:
    - hosts:
        - "sso.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
---
apiVersion: v1
kind: Service
metadata:
  name: ryzen-gaming
  namespace: networking
spec:
  ports:
    - name: http
      port: 8090
  type: ExternalName
  externalName: ryzen-gaming.skylab.fi
