cluster/apps/networking/misc-ingresses/dh-ingress-and-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dh
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: traefik
  rules:
    - host: "dh.${DEV_DOMAIN}"
      http:
        paths:
          - backend:
              service:
               name: dh
               port:
                 number: 443
            pathType: Prefix
    - host: "dh4.${DEV_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: dh
                port:
                  number: 443
            pathType: Prefix
  tls:
    - hosts:
        - "dh.${DEV_DOMAIN}"
        - "dh4.${DEV_DOMAIN}"
      secretName: ${DEV_DOMAIN}-tls
---
apiVersion: v1
kind: Service
metadata:
  name: dh
  namespace: networking
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dh
  namespace: networking
subsets:
  - addresses:
      - ip: ${DH_IPv6}
    ports:
      - port: 443
