cluster/apps/networking/misc-ingresses/home-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-srv-assistant
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: traefik
  rules:
    - host: "assistant.${HOME_DOMAIN}"
      http:
        paths:
          - backend:
              service:
               name: home-pve-docker
               port:
                number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "assistant.${HOME_DOMAIN}"
      secretName: ${HOME_DOMAIN}-tls
