cluster/apps/networking/misc-ingresses/home-pve-ingress-and-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: traefik
  rules:
    - host: "vault.${MAIN_DOMAIN}"
      http:
        paths:
          - backend:
              service:
               name: home-pve-docker
               port:
                number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "vault.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
