cluster/apps/networking/misc-ingresses/home-srv-ingress-and-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livetv
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-authelia-fi-auth@kubernetescrd"
    external-dns-cf.home.arpa/enabled: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "tv.${MAIN_DOMAIN}"
      http:
        paths:
          - backend:
              service:
               name: tvheadend-home-srv
               port:
                 number: 9981
            path: '/'
            pathType: Prefix
  tls:
    - hosts:
        - "tv.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livetv-stream
  namespace: networking
  annotations:
    auth-basic-fi.home.arpa/enabled: "true"
    external-dns-cf.home.arpa/enabled: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-basic-authelia@kubernetescrd"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "tv.${MAIN_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/stream/"
            backend:
              service:
               name: tvheadend-home-srv
               port:
                number: 9981
  tls:
    - hosts:
        - "tv.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livetv-dvr
  namespace: networking
  annotations:
    auth-fi.home.arpa/enabled: "true"
    external-dns-cf.home.arpa/enabled: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-basic-authelia@kubernetescrd"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: "tv.${MAIN_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/dvrfile/"
            backend:
              service:
                name: tvheadend-home-srv
                port:
                  number: 9981
  tls:
    - hosts:
        - "tv.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
---
apiVersion: v1
kind: Service
metadata:
  name: tvheadend-home-srv
  namespace: networking
spec:
  ports:
    - name: http
      port: 9981
  type: ExternalName
  externalName: 192.168.2.10
---
apiVersion: v1
kind: Service
metadata:
  name: home-srv-docker
  namespace: networking
spec:
  ports:
    - name: https
      port: 443
    - name: http
      port: 80
  type: ExternalName
  externalName: 192.168.2.10
