cluster/apps/networking/misc-ingresses/jenkins-ingress-and-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: traefik
  rules:
    - host: "ci.genpi64.com"
      http:
        paths:
          - backend:
              service:
                name: jenkins
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "ci.genpi64.com"
      secretName: ci.genpi64.com-tls
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: networking
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ExternalName
  externalName: 192.168.2.118
