cluster/apps/networking/misc-ingresses/kyverno-reporter.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kyverno-reporter-ui
  namespace: policy-reporter
  annotations:
    external-dns-cf/is-public: "true"
    external-dns.target/enabled: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "k-pr.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: policy-reporter-ui
                port:
                  number: 8080
            path: '/'
            pathType: Prefix
  tls:
    - hosts:
        - "k-pr.${SECRET_DOMAIN}"
      secretName: ${SECRET_DOMAIN}-tls
