cluster/apps/networking/misc-ingresses/sso-dev-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sso-dev
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: traefik
  rules:
    - host: "sso.${DEV_DOMAIN}"
      http:
        paths:
          - backend:
              serviceName: home-pve-docker
              servicePort: 443
  tls:
    - hosts:
        - "sso.${DEV_DOMAIN}"
      secretName: ${DEV_DOMAIN}-tls
