cluster/apps/networking/misc-ingresses/sso-fi-ingress-and-service.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sso-fi
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: traefik
  rules:
    - host: "sso.${MAIN_DOMAIN}"
      http:
        paths:
          - backend:
              serviceName: home-pve-docker
              servicePort: 443
  tls:
    - hosts:
        - "sso.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
---
apiVersion: v1
kind: Service
metadata:
  name: home-pve-docker
  namespace: networking
spec:
  ports:
    - name: https
      port: 443
  type: ExternalName
  externalName: 192.168.2.18
