cluster/apps/networking/misc-ingresses/sso-fi-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-fi
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: traefik
  rules:
    - host: "sso.${MAIN_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: home-pve-docker
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "sso.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
