cluster/apps/networking/misc-ingresses/zabbix-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-zabbix
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: traefik
  rules:
    - host: "z.${HOME_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nas-zabbix
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "*.${HOME_DOMAIN}"
      secretName: ${HOME_DOMAIN}-tls
---
apiVersion: v1
kind: Service
metadata:
  name: nas-zabbix
  namespace: networking
spec:
  ports:
    - name: http
      port: 80
  type: ExternalName
  externalName: zabbix.${COMPANY_DOMAIN}
